<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spelling Bee</string>
    <string name="pronounce">Pronounce</string>
    <string name="hint">Hint</string>
    <string name="next_word">Next Word</string>
    <string name="score">Score:</string>
    <string name="difficulty_menu">Change Difficulty</string>

    <string-array name="difficulty">
        <item>All Ages</item>
        <item>Years 5 to 6</item>
        <item>Years 7 to 8</item>
        <item>Years 9 to 10</item>
        <item>Years 11 to 12</item>
    </string-array>

    <string name="challenge_menu">Challenge</string>

    <string-array name="challenges">
        <item>1 minute</item>
        <item>3 minute</item>
        <item>5 minute</item>
    </string-array>

    <string name="reset_menu">Reset Stats</string>
    <string name="spelled">"Spelled: "</string>
    <string name="blank">" "</string>
    <string name="action_settings">Settings</string>
    <string name="enter">Enter</string>
    <string name="title_activity_menu">Spelling Bee</string>
    <string name="hello_world">Hello world!</string>

</resources>