<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/statusRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="15dp" >

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score"
            android:textSize="30sp"
            android:maxWidth='83dp'
            android:ellipsize="end"
			android:singleLine="true" />

        <Chronometer
            android:id="@+id/scoreChronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLength="5"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxWidth="83dp"
            android:singleLine="true"
            android:text="@string/spelled"
            android:textSize="30sp" />

    </LinearLayout>

    <TableRow
        android:id="@+id/interactiveRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center" >

            <TableRow
                android:id="@+id/currentWordRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/currentWordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="20"
                    android:text="@string/blank"
                    android:textSize="25sp" />

            </TableRow>

            <TableRow
                android:id="@+id/editTextRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp" >

                <EditText
                    android:id="@+id/inputEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:ellipsize="end"
                    android:inputType="none" >
                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/submitRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="40dp" >

                <Button
                    android:id="@+id/enterButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dip"
                    android:text="@string/enter" />

            </TableRow>

            <TableRow
                android:id="@+id/pronouceRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="40dp" >

                <Button
                    android:id="@+id/pronounceButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dip"
                    android:text="@string/pronounce" />

            </TableRow>

        </TableLayout>

        <ImageView
            android:id="@+id/wordImageView"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/ic_launcher" />

    </TableRow>

    <LinearLayout
        android:id="@+id/optionRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="35dp" >

        <Button
            android:id="@+id/hintButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint"
            android:padding="20dip"
            android:layout_weight="1" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_word"
            android:padding="20dip"
            android:layout_weight="1" />

    </LinearLayout>

</TableLayout>